# UA-2024-Compiler

./: .gitignore  Grammar.interp  GrammarParser.py  README.md  grammar.g4  llvm_tests.sh  main.py  project_contents.txt  pyproject.toml  test.ll  test.py
compiler/: __main__.py
example_source_files/: proj1_man_pass_constantFolding.c  proj2_man_pass_simpleAssignment.c
grammar/: Expression.g4  Grammar.g4  Main.g4  Statement.g4  Tokens.g4  Type.g4  generate_antlr.sh
grammars/: Main.g4  Project1.g4  Project2.g4  Project3.g4  generate_antlr.sh
input/: a_proof_implicit_warning.c  a_proof_invalid_bitwise.c  a_proof_invalid_shift.c  afor.c  awhile.c  conditionals.c  const_folding-prop.c  enums.c  folding_test.c  in.c  proj1_man_pass_constantFolding.c  proj1_man_pass_intLiteral.c  proj1_man_pass_whitespace.c  proj2_man_pass_advancedPointerOperations.c  proj2_man_semanticErr_incompatibleTypes4.c  proj2_opt_pass_constPointerToNonConstPointer1.c  proj3_man_pass_commentMultiLine.c  proj3_man_pass_typedef.c  simple_ptr.c  switch.c  symb_table.c  test.c
mipslite/: __init__.py  allocator.py  block.py  builder.py  function.py  module.py  register_manager.py  type.py
output/: afor.ll  afor_AST.dot  array_init_undefined_sizes.ll  array_init_undefined_sizes_AST.dot  array_init_undefined_sizes_SymbTable.dot  awhile.ll  awhile_AST.dot  const_folding-prop.ll  const_folding-prop_AST.dot  const_folding-prop_SymbTable.dot  enums.ll  enums_AST.dot  enums_SymbTable.dot  folding_test_AST.dot  function_array.ll  function_array_AST.dot  function_array_SymbTable.dot  implicit_arr.ll  in.ll  (+72 more)
(+413 files in other folders)
