[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["ArneDePeuter <107651037+ArneDePeuter@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.13.1"
pytest = "^8.0.0"
llvmlite = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
